--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Software Engineer-L1 at Polygon Technology Limited, Dhaka, Bangladesh"
   location         : "Dhaka, Bangladesh"
   employer         : "Jashore University of Science and Technology"
-  uri              : "https://just.edu.bd/"
+  uri              : #"https://just.edu.bd/"
   email            : "taslim.cse06@gmail.com" 
 
   # Academic websites
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/Shanto06"
   LinkedIn         : "https://www.linkedin.com/in/taslimhosen/"  
   Github	   : "https://github.com/Shanto06"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
