--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/Shanto06"
+  github           : "Shanto06"
   LinkedIn         : "https://www.linkedin.com/in/taslimhosen/"  
   Github	   : "https://github.com/Shanto06"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
