[UPDATE] config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "Shanto06"
-  LinkedIn         : "https://www.linkedin.com/in/taslimhosen/"  
-  Github	   : "https://github.com/Shanto06"
+  linkedin         : "https://www.linkedin.com/in/taslimhosen/"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
