--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=FidSHJIAAAAJ&hl=en"
+  linkedin         : "https://www.linkedin.com/in/taslimhosen/"
   impactstory      : # URL
   orcid            : #"http://orcid.org/yourorcidurl"
   semantic         : # URL
@@ -44,7 +45,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "Shanto06"
-  linkedin         : "https://www.linkedin.com/in/taslimhosen/"
+  linkedin         : #"https://www.linkedin.com/in/taslimhosen/"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
