[UPDATE] config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Taslim Hosen Shanto"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://shanto06.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "shanto06/academicpages.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -27,24 +27,25 @@ author:
   bio              : "Software Engineer-L1 at Polygon Technology Limited, Dhaka, Bangladesh"
   location         : "Dhaka, Bangladesh"
   employer         : "Jashore University of Science and Technology"
-  uri              : #"https://just.edu.bd/"
+  uri              : "https://just.edu.bd/"
   email            : "taslim.cse06@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=FidSHJIAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "Shanto06"
-  linkedin         : "https://www.linkedin.com/in/taslimhosen/"
+  github           : "academicpages"
+  LinkedIn         : "https://www.linkedin.com/in/taslimhosen/"  
+  Github	   : "https://github.com/Shanto06"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
