--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Taslim Hosen Shanto"
 description              : #&description "personal description"
 url                      : https://shanto06.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : #"" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shanto06/shanto06.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -76,7 +76,7 @@ author:
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
-words_per_minute         : 160
+words_per_minute         : 170
 future                   : true
 read_more                : #"disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
