--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,28 @@
 # main links links
 main:
+  - title: "Work Experience"
+    url: /experience/
+    
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Projects"
+    url: /projects/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Education"
+    url: /education/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Awards"
+    url: /awards/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+  - title: "Services"
+    url: /services/
+
+  - title: "Skills"
+    url: /skills/
+        
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Resume"
+    url: /resume/
