[UPDATE] config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Taslim Hosen Shanto"
 title_separator          : "-"
 name                     : &name "Taslim Hosen Shanto"
-description              : &description "Welcome to taslim Homepage!"
+description              : &description "personal description"
 url                      : https://shanto06.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shanto06/shanto06.github.io"
