--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,28 +1,11 @@
-# main links links
 main:
-  - title: "Work Experience"
-    url: /experience/
-    
   - title: "Publications"
     url: /publications/
-
-  - title: "Projects"
-    url: /projects/    
-
-  - title: "Education"
-    url: /education/    
-    
-  - title: "Awards"
-    url: /awards/
-        
-  - title: "Services"
-    url: /services/
-
-  - title: "Skills"
-    url: /skills/
-        
+  - title: "Portfolio" 
+    url: /portfolio/
+  - title: "Teaching"
+    url: /teaching/
+  - title: "Talks"
+    url: /talks/
   - title: "CV"
     url: /cv/
-    
-  - title: "Resume"
-    url: /resume/
